#33 base class with id, createdDt, modifiedDT closes #33